force-app/main/default/objects/ssot__PatientRegisteredDevice__dlm/fields/ssot__CareProgramEnrolleeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareProgramEnrolleeId__c</fullName>
    <label>Care Program Enrollee</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareProgramEnrolleeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>