force-app/main/default/objects/ssot__PatientRegisteredDevice__dlm/fields/ssot__RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegistrationDate__c</fullName>
    <label>Registration Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegistrationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>