force-app/main/default/objects/ssot__PatientRegisteredDevice__dlm/fields/ssot__rel_1716723743389_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716723743389_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientRegisteredDevice_DeviceTypeId_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>PatientRegisteredDevice_DeviceTypeId_rel</relationshipLabel>
    <relationshipName>rel_1716723743389_end</relationshipName>
    <type>Lookup</type>
</CustomField>