force-app/main/default/objects/ssot__PatientRegisteredDevice__dlm/fields/ssot__SafetyInformationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__SafetyInformationText__c</fullName>
    <label>Safety Information</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SafetyInformationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>