force-app/main/default/objects/ssot__PatientRegisteredDevice__dlm/fields/ssot__UniqueDeviceId1IssuerText__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueDeviceId1IssuerText__c</fullName>
    <label>Unique DeviceId1 Issuer</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueDeviceId1IssuerText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>