force-app/main/default/objects/ssot__PatientRegisteredDevice__dlm/fields/ssot__UniqueDeviceId3Text__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueDeviceId3Text__c</fullName>
    <label>Unique DeviceId3</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueDeviceId3Text</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>